Fixed border-collapse issue on grid columns by using box-shadow instead of border.

--- a/style/style.scss
+++ b/style/style.scss
@@ -63,8 +63,7 @@
     }
 }
 
-.brag {
-
-    border: solid 1px #000;
+[class*="col-"].grid-outline {
+    box-shadow: 0 0 1px 0 #000;
     background-color: #fff;
 }
